<resources>
    <string name="app_name">Attendence</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="dontHaveAccount">If you don\'t have account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loginDescription">By logging in you can agree to our terms</string>
    <string name="signUp">Sign up</string>
    <string name="letsJoinWithUs">Lets join with us</string>
    <string name="emailId">Email-Id</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="enterPassword">Enter password</string>
    <string name="acceptTerms">Accept Terms and Conditions</string>
    <string name="userNameText">YO✋ %1$s !!</string>
    <string name="login_in">Login In</string>
    <string name="enter_username_and_password">Enter username and password</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check out</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="attendance_history">Attendance History</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>