<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="@dimen/zeroMargin">

    <LinearLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/constrain_padding"
        android:background="@drawable/login_card_style"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/fragmentLoginTextSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginDescription"
            android:textColor="@color/accent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginMarginTop"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginMarginTop"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/login" />

        <LinearLayout
            android:id="@+id/loginFooterRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/askingQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/dontHaveAccount" />

            <TextView
                android:id="@+id/signUpText"
                style="@style/MyClickableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
