<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/custom_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signUpScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout">

        <LinearLayout
            android:id="@+id/signUpContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_12"
            android:orientation="vertical"
            tools:context=".ui.sign_up.SignUpFragment">

            <TextView
                android:id="@+id/signUpHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/saira_bold"
                android:gravity="center"
                android:text="@string/signUp"
                android:textSize="@dimen/text_size_26"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signUpDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/letsJoinWithUs"
                android:textSize="@dimen/text_size_22" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/username"
                android:padding="@dimen/zeroMargin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:gravity="top|start"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:hint="@string/emailId"
                android:inputType="textEmailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/mobileNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enterPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signUp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/saira_semibold"
                android:text="@string/acceptTerms"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
